--- a/ProjetoFinal/Config/DefaultEngine.ini
+++ b/ProjetoFinal/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/FirstLevel.FirstLevel
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/BP_MainGameMode.BP_MainGameMode_C
 EditorStartupMap=/Game/Levels/FirstLevel.FirstLevel
 
