--- a/ProjetoFinal/Config/DefaultEngine.ini
+++ b/ProjetoFinal/Config/DefaultEngine.ini
@@ -94,3 +94,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/NavigationSystem.NavigationSystemV1]
+CrowdManagerClass=None
+
