--- a/ProjetoFinal/Config/DefaultEngine.ini
+++ b/ProjetoFinal/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/BP_MainGameMode.BP_MainGameMode_C
-EditorStartupMap=/Game/Levels/FirstLevel.FirstLevel
+EditorStartupMap=/Game/Levels/MainMenu.MainMenu
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
