--- a/ProjetoFinal/Config/DefaultGame.ini
+++ b/ProjetoFinal/Config/DefaultGame.ini
@@ -5,3 +5,10 @@ CommonButtonAcceptKeyHandling=TriggerClick
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=6C319F8F42AD3750D2902B91E5561ECC
+ProjectName=Bodhi's Great Adventure
+CompanyName=VacPonto
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+FullRebuild=True
+
