--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,6 @@ Plugins/**/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
-/ProjetoFinal/.idea
-/ProjetoFinal/Intermediate
-/ProjetoFinal/Saved
-/ProjetoFinal/Saved
+ProjetoFinal/.idea
+ProjetoFinal/Intermediate
+ProjetoFinal/Saved
