--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,6 @@ Plugins/**/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
-ProjetoFinal/.idea
-ProjetoFinal/Intermediate
-ProjetoFinal/Saved
+*/.idea
+*/Intermediate
+*/Saved
